--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,12 @@
 .home {
     color: #333;
-    margin-top: 20px;
-    margin-left: 70px;
     font-size: 2rem;
+    margin: 20px 0 0 70px;
+}
+
+.time-card {
+    margin: 40px 0 0 70px;
+    width: 300px; /* Adjust the width of the TimeCard */
 }
 
 .dashboard {
@@ -11,6 +15,29 @@
     justify-content: flex-start;
     height: 100%;
     /* background-color: aquamarine; */
-    margin: 70px; 
+    margin: 40px 0 0 70px;
+    gap: 50px; 
+    /* background-color: antiquewhite; */
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
     gap: 50px; /* Adjust the gap between cards */
+    padding: 0 12px; /* Add horizontal padding */
+    /* background-color: aqua; */
+    /* padding: 20px 0;  */
+}
+
+.bus {
+    display: flex;
+    flex-direction: column;
+    margin: 40px 843px 0 70px;
+}
+
+.spintex, .bus {
+    border: 1px solid black;
+    border-radius: 8px;
+    padding: 20px;
+    background-color: light;
 }
