--- a/frontend/src/routes/Vehicles.css
+++ b/frontend/src/routes/Vehicles.css
@@ -12,4 +12,17 @@
     width:50%;
     margin: 40px 70px 0 50px;;
 }
+.test {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0 0 0;
+    /* background-color: aliceblue; */
+}
 
+.test1 {
+    display: flex;
+    flex-direction: row;
+    gap: 20px
+}
