--- a/frontend/src/routes/Home.css
+++ b/frontend/src/routes/Home.css
@@ -9,30 +9,27 @@
     width: 200px; /* Adjust the width of the TimeCard */
 }
 
-.dashboard {
+/* .dashboard {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     height: 100%;
-    /* background-color: aquamarine; */
     margin: 30px 0 0 70px;
     gap: 50px; 
-    /* background-color: antiquewhite; */
-}
+} */
 
-.row {
+/* .row {
     display: flex;
     flex-direction: row;
-    gap: 50px; /* Adjust the gap between cards */
-    padding: 0 12px; /* Add horizontal padding */
-    /* background-color: aqua; */
-    /* padding: 20px 0;  */
-}
+    padding: 0 12px; 
+    background-color: aqua;
+    padding: 20px 0; 
+} */
 
 .bus {
-    display: flex;
-    flex-direction: column;
-    margin: 30px 843px 0 70px;
+    /* display: flex;
+    flex-direction: column; */
+    margin: 30px 1000px 0 70px;
 }
 
 .spintex, .bus {
@@ -40,4 +37,9 @@
     border-radius: 8px;
     padding: 20px;
     background-color: whitesmoke;
+}
+
+.row {
+    margin: auto;
+    width: 90%;
 }
