--- a/frontend/src/routes/Vehicles.css
+++ b/frontend/src/routes/Vehicles.css
@@ -10,7 +10,7 @@
     /* background-color: aquamarine; */
     padding:0;
     width:20%;
-    margin: 60px 70px 0 50px;;
+    margin: 50px 70px 0 130px;
 }
 .test {
     display: flex;
