--- a/frontend/src/routes/Home.css
+++ b/frontend/src/routes/Home.css
@@ -18,18 +18,23 @@
     gap: 50px; 
 } */
 
-/* .row {
+.row {
     display: flex;
     flex-direction: row;
-    padding: 0 12px; 
-    background-color: aqua;
-    padding: 20px 0; 
+    gap: 50px;
+    background-color: whitesmoke;
+    justify-content: center;
+}
+
+/* .bus {
+    display: flex;
+    flex-direction: column;
+    margin: 30px 1000px 0 70px;
 } */
 
 .bus {
-    /* display: flex;
-    flex-direction: column; */
-    margin: 30px 1000px 0 70px;
+    width: 70%;
+    margin: 30px auto 0 auto;
 }
 
 .spintex, .bus {
