--- a/frontend/src/routes/Home.css
+++ b/frontend/src/routes/Home.css
@@ -6,17 +6,9 @@
 
 .time-card {
     margin: 20px 0 0 70px;
-    width: 200px; /* Adjust the width of the TimeCard */
+    width: 200px;
 }
 
-/* .dashboard {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    height: 100%;
-    margin: 30px 0 0 70px;
-    gap: 50px; 
-} */
 
 .row {
     display: flex;
@@ -24,27 +16,15 @@
     gap: 50px;
     background-color: whitesmoke;
     justify-content: center;
+    margin: auto;
+    width: 90%;
 }
-
-/* .bus {
-    display: flex;
-    flex-direction: column;
-    margin: 30px 1000px 0 70px;
-} */
 
 .bus {
     width: 70%;
     margin: 30px auto 0 auto;
-}
-
-.spintex, .bus {
     border: 1px solid black;
     border-radius: 8px;
     padding: 20px;
     background-color: whitesmoke;
-}
-
-.row {
-    margin: auto;
-    width: 90%;
 }
